templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-rollout-route
  namespace: rollouts-demo-istio
spec:
  parentRefs:
  - name: istio-ingress-gw
    namespace: gateways
  hostnames:
  - "istio-rollout.local.test"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: istio-rollout-stable
      port: 80
      kind: Service
    - name: istio-rollout-canary
      port: 80
      kind: Service
